# doodlejump

./: CMakeLists.txt  README.md
.circleci/: config.yml
html/: AbstractFactory_8h_source.html  BGTileManager_8h_source.html  BGTileView_8h_source.html  BGTile_8h_source.html  BonusManager_8h_source.html  BonusView_8h_source.html  Bonus_8h_source.html  Camera_8h_source.html  CollisionSystem_8h_source.html  ConcreteFactory_8h_source.html  Entitymodel_8h_source.html  EntitytView_8h_source.html  Enums_8h_source.html  Game_8h_source.html  Observer_8h_source.html  PlatformManager_8h_source.html  PlatformView_8h_source.html  Platform_8h_source.html  PlayerView_8h_source.html  Player_8h_source.html  Random_8h_source.html  StopWatch_8h_source.html  Subject_8h_source.html  World_8h_source.html  annotated.html  classGame-members.html  classGame.html  classObserver-members.html  classObserver.html  classObserver__inherit__graph.map  classObserver__inherit__graph.md5  classRandom-members.html  classRandom.html  classStopWatch-members.html  classStopWatch.html  classes.html  classmodel_1_1AbstractFactory-members.html  classmodel_1_1AbstractFactory.html  classmodel_1_1AbstractFactory__inherit__graph.map  classmodel_1_1AbstractFactory__inherit__graph.md5  (+127 more)
html/search/: all_0.js  all_1.js  all_11.js  all_13.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  classes_8.js  classes_a.js  classes_b.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  (+4 more)
latex/: AbstractFactory_8h_source.tex  BGTileManager_8h_source.tex  BGTileView_8h_source.tex  BGTile_8h_source.tex  BonusManager_8h_source.tex  BonusView_8h_source.tex  Bonus_8h_source.tex  Camera_8h_source.tex  CollisionSystem_8h_source.tex  ConcreteFactory_8h_source.tex  Entitymodel_8h_source.tex  EntitytView_8h_source.tex  Enums_8h_source.tex  Game_8h_source.tex  Observer_8h_source.tex  PlatformManager_8h_source.tex  PlatformView_8h_source.tex  Platform_8h_source.tex  PlayerView_8h_source.tex  Player_8h_source.tex  Random_8h_source.tex  StopWatch_8h_source.tex  Subject_8h_source.tex  World_8h_source.tex  annotated.tex  classGame.tex  classObserver.tex  classObserver__inherit__graph.md5  classRandom.tex  classStopWatch.tex  classmodel_1_1AbstractFactory.tex  classmodel_1_1AbstractFactory__inherit__graph.md5  classmodel_1_1BGTile.tex  classmodel_1_1BGTileManager.tex  classmodel_1_1BGTile__coll__graph.md5  classmodel_1_1Bonus.tex  classmodel_1_1BonusManager.tex  classmodel_1_1Bonus__coll__graph.md5  classmodel_1_1Bonus__inherit__graph.md5  classmodel_1_1Camera.tex  (+34 more)
src/: Game.cpp  Game.h  config.txt  main.cpp
src/Controller/: CameraController.cpp  CameraController.h  EntityController.cpp  EntityController.h  PlatformController.cpp  PlatformController.h  PlayerController.cpp  PlayerController.h
src/Helper/: Random.cpp  Random.h  StopWatch.cpp  StopWatch.h
src/Model/: AbstractFactory.cpp  AbstractFactory.h  BGTileManager.cpp  BGTileManager.h  BonusManager.cpp  BonusManager.h  Camera.cpp  Camera.h  CollisionSystem.cpp  CollisionSystem.h  Enums.h  Observer.cpp  Observer.h  PlatformManager.cpp  PlatformManager.h  World.cpp  World.h
src/Model/Entities/: BGTile.cpp  BGTile.h  Bonus.cpp  Bonus.h  Entitymodel.cpp  Entitymodel.h  Platform.cpp  Platform.h  Player.cpp  Player.h  Subject.cpp  Subject.h
src/View/: BGTile.cpp  BGTile.h  BGTileView.cpp  BGTileView.h  BonusView.cpp  BonusView.h  ConcreteFactory.cpp  ConcreteFactory.h  EntitytView.cpp  EntitytView.h  PlatformView.cpp  PlatformView.h  PlayerView.cpp  PlayerView.h
